# rust-experiments

./: README.md
solutions/catr/: .gitignore  Cargo.toml
solutions/catr/src/: main.rs
solutions/echor/: Cargo.toml
solutions/echor/src/: main.rs  main.rs.bak
solutions/echor/tests/: cli.rs
solutions/headr/: Cargo.toml
solutions/headr/src/: main.rs
