[package]
name = "catr"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Martinez"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"]}
clap-stdin = "0.5.1"
predicates = "3.1.3"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
rand = "0.8.5"